v0.10.0rc2/_sources/generated/statsmodels.sandbox.regression.gmm.GMMResults.rst.txt
statsmodels.sandbox.regression.gmm.GMMResults
=============================================

.. currentmodule:: statsmodels.sandbox.regression.gmm

.. autoclass:: GMMResults

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         GMMResults.bse
         GMMResults.calc_cov_params
         GMMResults.compare_j
         GMMResults.conf_int
         GMMResults.cov_params
         GMMResults.f_test
         GMMResults.get_bse
         GMMResults.initialize
         GMMResults.jtest
         GMMResults.jval
         GMMResults.llf
         GMMResults.load
         GMMResults.normalized_cov_params
         GMMResults.predict
         GMMResults.pvalues
         GMMResults.q
         GMMResults.remove_data
         GMMResults.save
         GMMResults.summary
         GMMResults.t_test
         GMMResults.t_test_pairwise
         GMMResults.tvalues
         GMMResults.wald_test
         GMMResults.wald_test_terms



   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         GMMResults.bse_
         GMMResults.use_t

